# sqlx-test-0-7-2-issue

./: Cargo.toml
migrations/: 1_test.sql
src/: main.rs
